# fastexcerpt

./: 404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  test_pypi_publish.yml
benchmark/: benchmark.md  benchmark.py  index.html
docs/: benchmark.md  design.md  index.md  roadmap.md
fastexcerpt/: __init__.py  fastexcerpt.py
roadmap/: index.html
search/: search_index.json
tests/: test_fastexcerpt.py
