[tool]

[tool.poetry]
name = "fastexcerpt"
version = "0.0.0"
homepage = "https://github.com/k15z/fastexcerpt"
description = "Fast extraction of relevant excerpts for long-form text."
authors = ["Kevin Alex Zhang <hello@kevz.dev>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
include = [
    "LICENSE",
    "fastexcerpt/py.typed"
]

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = "^3.4.0"
nltk = "^3.8.1"
scikit-learn = "^1.2.1"
luigi = "^3.2.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"

pylint = "^2.6.0"
black = "22.3.0"
mypy = "0.960"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=fastexcerpt --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 90"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
